syntax = "proto3";

package grpcghost;

service ghost{
	rpc diskcheck(diskRequest)               returns (APIResponse);
}

message Empty{
}

message APIResponse{
	string responsemessage = 1;
	int32 responsecode = 2;
}

message APIMessage{
	repeated string responsemessage = 1;
}

message diskRequest{
	string dir = 1;
}

message definitionRequest{
	string schemaname = 1;
	string tablename = 2;
}

message ibdRequest{
	string dir = 1;
	string schemaname = 2;
	string tablename = 3;
}

message ghostRequest{
	string schemaname = 1;
	string tablename = 2;
    string statement = 3;
}

message interactiveRequest{
	string schemaname = 1;
	string tablename = 2;
    string ghostcommand = 3;
}


